--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <button>Explore Now</button>
             </div>
             <div class="right">
-                <img src="img/coding.jpg" >
+                <img src="img/coding.webp" >
             </div>
         </div>
     </div>
